# AISoftwareOrg

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_factory.sh
.claude/: settings.json
agents/: __init__.py  base.py
config/: __init__.py  client.py  env_file.py  providers.py  rules.yaml  settings.py
dashboard/: app.py  database.py  jwt_utils.py  queue_manager.py  worker.py
docs/: admin_manual.html  agent_workflow.md  ai_software_factory_dashboard.md  api_contract.md  architecture.md  architecture_overview.html  changelog.md  code_Connect_Modular_AI_Factory_to_the_real_job_system.md  code_Modular_AI_Factory.md  code_fix.md  deployment_guide.md  development_guide.md  improvement_roadmap.html  phase3_agent_pipeline.md  project_plane.html  project_plane.md  project_review.html
factory_core/: __init__.py  module_executor.py  module_registry.py  pipeline_builder.py  pipeline_runner.py  request_adapter.py  stack_resolver.py  types.py  workflow_registry.py
frontend/: README.md  index.html  package-lock.json  package.json  report.html  vite.config.js
memory/: __init__.py  manager.py  postgres_storage.py  storage.py
prompts/: architect.md  ba.md  dev.md  qa.md  refactor.md  reviewer.md  uiux.md
sandbox/: __init__.py  aio_sandbox.py  local_sandbox.py  sandbox.py
system/: __init__.py
tests/: test_agents.py  test_approval_queue.py  test_auth_coverage.py  test_checkpoint.py  test_cli.py  test_cost_tracker.py  test_dashboard.py  test_dashboard_auth.py  test_extractor.py  test_full_workflow.py  test_git_agent.py  test_graph.py  test_llm_router.py  test_logging.py  test_memory.py  test_messaging.py  test_modular_factory.py  test_modular_pipeline_runner.py  test_multi_team.py  test_parallel.py  test_phase1_p0.py  test_phase2.py  test_phase2_job_system.py  test_phase3_pipeline.py  test_pipeline_mock.py  (+5 more)
(+184 files in other folders)
