[project]
name = "unified-ai-software-org"
version = "1.2.0"
description = "Unified AI Software Factory — Multi-Agent system with 12-phase Flutter pipeline, dashboard, and automated code generation."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "langgraph>=1.0",
    "langchain-core>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "structlog>=24.0",
    "click>=8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "httpx>=0.27",
]

# ------------------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
norecursedirs = ["workspace", "venv", ".git", "frontend", "node_modules"]
addopts = "--ignore=tests/test_cli.py"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# ------------------------------------------------------------------------------
# Ruff (Linter & Formatter)
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "config", "core", "dashboard", "memory", "sandbox", "system", "workflows"]
